@@ -3,16 +3,18 @@ package nextstep.subway.applicaion;
 import nextstep.subway.applicaion.dto.LineRequest;
 import nextstep.subway.applicaion.dto.LineResponse;
 import nextstep.subway.applicaion.dto.StationResponse;
-import nextstep.subway.domain.Line;
-import nextstep.subway.domain.LineRepository;
-import nextstep.subway.domain.Station;
-import nextstep.subway.domain.StationRepository;
+import nextstep.subway.domain.line.Line;
+import nextstep.subway.domain.line.LineRepository;
+import nextstep.subway.domain.line.Section;
+import nextstep.subway.domain.station.Station;
+import nextstep.subway.domain.station.StationRepository;
 import nextstep.subway.exception.DataNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,12 +30,13 @@ public class LineService {
 
     @Transactional
     public LineResponse saveLine(LineRequest lineRequest) {
-        Station upStation = getStation(lineRequest.getUpStationId());
-        Station downStation = getStation(lineRequest.getDownStationId());
+        validateStation(lineRequest.getUpStationId());
+        validateStation(lineRequest.getDownStationId());
+
+        Section section = new Section(null, lineRequest.getUpStationId(), lineRequest.getDownStationId(), lineRequest.getDistance());
 
         Line createLine = new Line(
-            null, lineRequest.getName(), lineRequest.getColor(),
-            lineRequest.getDistance(), Arrays.asList(upStation, downStation)
+            null, lineRequest.getName(), lineRequest.getColor(), List.of(section)
         );
 
         Line createdLine = lineRepository.save(createLine);
@@ -45,6 +48,7 @@ public class LineService {
         Line findLine = getLine(id);
         return getLineResponse(findLine);
     }
+
     @Transactional(readOnly = true)
     public List<LineResponse> findAllLines() {
         return lineRepository.findAll().stream().map(this::getLineResponse)
@@ -64,11 +68,25 @@ public class LineService {
     }
 
     private LineResponse getLineResponse(Line createdLine) {
+        Set<Long> stationIdSet = new HashSet<>();
+
+        createdLine.getSections()
+            .getSections()
+            .forEach(section -> {
+                stationIdSet.add(section.getUpStationId());
+                stationIdSet.add(section.getDownStationId());
+            });
+
+        List<StationResponse> stations = stationIdSet.stream()
+            .map(stationId -> {
+                Station findStation = getStation(stationId);
+                return new StationResponse(findStation.getId(), findStation.getName());
+            }).collect(Collectors.toList());
+
+
         return new LineResponse(
             createdLine.getId(), createdLine.getName(), createdLine.getColor(),
-            createdLine.getStations().getStations().stream()
-            .map(station -> new StationResponse(station.getId(), station.getName()))
-            .collect(Collectors.toList()));
+            stations);
     }
 
     private Station getStation(Long stationId) {
@@ -83,6 +101,12 @@ public class LineService {
         return lineRepository.findById(id).orElseThrow(
             () -> new DataNotFoundException("Line 데이터가 없습니다.")
         );
+    }
+
+    private void validateStation(Long stationId) {
+        if (!stationRepository.findById(stationId).isPresent()) {
+            throw new DataNotFoundException("Station 데이터가 없습니다.");
+        }
     }
 
 
